force-app/main/default/objects/Case/fields/Relating_to_Sub_Menu__c.field-meta.xml
<CustomField>
    <fullName>Relating_to_Sub_Menu__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Relating to Sub Menu</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relating_to__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>24/7 Sports Bar</fullName>
            </value>
            <value>
                <fullName>Payment Detail Verification</fullName>
            </value>
            <value>
                <fullName>Bar Nexus</fullName>
            </value>
            <value>
                <fullName>Bar Tikram</fullName>
            </value>
            <value>
                <fullName>BLACK Bar</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Flying Fish Bar</fullName>
            </value>
            <value>
                <fullName>G&amp;Tea</fullName>
            </value>
            <value>
                <fullName>Jade Rabbit</fullName>
            </value>
            <value>
                <fullName>Latitude</fullName>
            </value>
            <value>
                <fullName>Marquee</fullName>
            </value>
            <value>
                <fullName>Oasis Lounge</fullName>
            </value>
            <value>
                <fullName>Rock Lily</fullName>
            </value>
            <value>
                <fullName>Sokyo Lounge</fullName>
            </value>
            <value>
                <fullName>Vantage Bar</fullName>
            </value>
            <value>
                <fullName>Atrium Bar</fullName>
            </value>
            <value>
                <fullName>Garden Kitchen and Bar</fullName>
            </value>
            <value>
                <fullName>Kiyomi Bar</fullName>
            </value>
            <value>
                <fullName>Nineteen at The Star</fullName>
            </value>
            <value>
                <fullName>Sports Bar</fullName>
            </value>
            <value>
                <fullName>LIVEWIRE</fullName>
            </value>
            <value>
                <fullName>Ryans on The Park</fullName>
            </value>
            <value>
                <fullName>TAB Bar</fullName>
            </value>
            <value>
                <fullName>Will &amp; Flow</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>The Star Club Host Service Desk</fullName>
            </value>
            <value>
                <fullName>The Star Club Program / Benefits</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Dining-Pool Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>