force-app/main/default/objects/Case/fields/Revocation_3c3e_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Revocation_3c3e_Requested_Date__c</fullName>
    <description>The date within the revocation request document (Form 3C or 3E). Becomes mandatory on case creation when origin is 3c Form, 3c Form 24hr, or 3e Form. Must not be a future date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>3c3e Requested Date</label>
    <type>Date</type>
</CustomField>