force-app/main/default/objects/Case/fields/Revocation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reason__c</fullName>
    <description>Revocation justification</description>
    <label>Revocation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval from RDC</fullName>
            </value>
            <value>
                <fullName>Expiry without re-entries</fullName>
            </value>
            <value>
                <fullName>QCAT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>