force-app/main/default/objects/Case/fields/Revocation_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reason_Other__c</fullName>
    <description>Free text reason when &apos;Other&apos; is selected.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>