force-app/main/default/objects/Case/fields/Written_Warning_Date__c.field-meta.xml
<CustomField>
    <fullName>Written_Warning_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Written Warning Date</label>
    <type>Date</type>
</CustomField>