force-app/main/default/objects/Case/fields/Written_Warning_Exclusion_Number__c.field-meta.xml
<CustomField>
    <fullName>Written_Warning_Exclusion_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Written Warning Exclusion Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>