force-app/main/default/objects/Case/recordTypes/Cashless_Support.recordType-meta.xml
<RecordType>
    <fullName>Cashless_Support</fullName>
    <active>true</active>
    <businessProcess>Cashless Support</businessProcess>
    <label>Cashless Support</label>
</RecordType>