force-app/main/default/objects/Case/recordTypes/Exl_Apply_Contravention.recordType-meta.xml
<RecordType>
    <fullName>Exl_Apply_Contravention</fullName>
    <active>true</active>
    <businessProcess>Contravention</businessProcess>
    <description>Used to document contravention incidents related to a patron’s exclusion, including confirmed, attempted, or unconfirmed breaches of exclusion conditions.</description>
    <label>Apply Contravention</label>
</RecordType>