force-app/main/default/objects/Case/recordTypes/Exl_Apply_Exclusion.recordType-meta.xml
<RecordType>
    <fullName>Exl_Apply_Exclusion</fullName>
    <active>true</active>
    <businessProcess>Exclusion</businessProcess>
    <description>This record type is designed to cater to the following case types - Apply Self Exclusion, Apply Problem Gambling Exclusion, Apply TPOE Exclusion, Apply Police Exclusion, Apply External Exclusion, Apply Venue Exclusion, Apply WoL Exclusion</description>
    <label>Apply Exclusion</label>
</RecordType>