force-app/main/default/objects/Case/recordTypes/Exl_Revoke_Exclusion.recordType-meta.xml
<RecordType>
    <fullName>Exl_Revoke_Exclusion</fullName>
    <active>true</active>
    <businessProcess>Revocation</businessProcess>
    <description>This record type is designed to cater to the following case types - Revoke Self Exclusion, Revoke Problem Gambling Exclusion, Revoke TPOE Exclusion, Revoke Police Exclusion, Revoke External Exclusion, Revoke Venue Exclusion, Revoke WoL Exclusion</description>
    <label>Revoke Exclusion</label>
</RecordType>