force-app/main/default/objects/Case/recordTypes/Guest_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Guest_Feedback</fullName>
    <active>true</active>
    <businessProcess>Guest Feedback</businessProcess>
    <description>Please create Feedback Case via &apos;Create Feedback&apos; Button</description>
    <label>Guest Feedback</label>
</RecordType>