force-app/main/default/objects/Case/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <businessProcess>Guest Feedback</businessProcess>
    <description>This Record type is to define the read only cases.</description>
    <label>Read Only</label>
</RecordType>