force-app/main/default/objects/Case/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <businessProcess>Guest Feedback</businessProcess>
    <description>Please create Feedback Case via &apos;Create Feedback&apos; Button</description>
    <label>Ticket</label>
</RecordType>