force-app/main/default/objects/Case/validationRules/Cashless_Role_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cashless_Role_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Permission.Skip_Validations_Permission, false, 
IF($Profile.Name != &apos;System Administrator&apos;, ( $Permission.TSEG_Casino_Host_Access_PS=true  || $Permission.TSEG_Cashless_Support  = true  ) &amp;&amp; (RecordType.Name = &apos;Guest Feedback&apos; || RecordType.Name = &apos;Ticket&apos;), false))</errorConditionFormula>
    <errorMessage>You don’t have access to create feedback case</errorMessage>
</ValidationRule>