force-app/main/default/objects/Case/validationRules/Check_Feedback_if_from_flow.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Feedback_if_from_flow</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Permission.Skip_Validations_Permission, false,
IF($Profile.Name != &apos;System Administrator&apos;, (RecordType.Name = &apos;Guest Feedback&apos; &amp;&amp; ISPICKVAL(Relating_to__c,&apos;&apos;)), false))</errorConditionFormula>
    <errorMessage>Please create Feedback Case via &apos;Create Feedback&apos; Button</errorMessage>
</ValidationRule>