force-app/main/default/objects/Case/validationRules/Do_not_change_Contact_and_Desc.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_change_Contact_and_Desc</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND($Profile.Name != &apos;System Administrator&apos;, NOT($Permission.Skip_Validations_Permission)), IF(RecordType.DeveloperName = &apos;Cashless_Support&apos; &amp;&amp;  NOT(ISPICKVAL(Status,&apos;New&apos;)) &amp;&amp; (ISCHANGED(ContactId) || ISCHANGED(Description)), true, false ), false)</errorConditionFormula>
    <errorMessage>Not able to edit ‘Contact Name’ and&apos; Description&apos; fields when case status is no longer ‘New’</errorMessage>
</ValidationRule>