force-app/main/default/objects/Case/validationRules/Exl_ExclusionUsersCannotUpdateOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>Exl_ExclusionUsersCannotUpdateOwner</fullName>
    <active>true</active>
    <description>Users should not be able to update record Owner for Exclusion Records</description>
    <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; 
&amp;&amp; $Permission.Exl_ReadOnlyUser_CP 
&amp;&amp; ISCHANGED( OwnerId ) 
&amp;&amp; ((RecordType.Name = &apos;Apply Exclusion&apos;) || (RecordType.Name = &apos;Apply Contravention&apos;) || (RecordType.Name = &apos;Revoke Exclusion&apos;))</errorConditionFormula>
    <errorMessage>You don’t have permission to take that action on this record or related records. For help, contact your Salesforce admin.</errorMessage>
</ValidationRule>