force-app/main/default/objects/Case/validationRules/Feedback_Role_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Feedback_Role_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>/*
IF($Profile.Name != &apos;System Administrator&apos;, $UserRole.Name = &apos;Feedback Operation&apos; &amp;&amp; RecordType.Name = &apos;Cashless Support&apos;, false)
*/

IF( $Permission.Skip_Validations_Permission
,false
,IF($Profile.Name != &apos;System Administrator&apos;,  $UserRole.Name = &apos;Feedback Operation&apos; &amp;&amp; RecordType.Name = &apos;Cashless Support&apos;, false)
)</errorConditionFormula>
    <errorMessage>You don’t have access to create Cashless Support case</errorMessage>
</ValidationRule>