force-app/main/default/objects/Case/validationRules/Feedback_source_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Feedback_source_validation</fullName>
    <active>true</active>
    <errorConditionFormula>/*
IF($Profile.Name != &apos;System Administrator&apos;, And( ISPICKVAL(Origin, &apos;web&apos;), ISCHANGED( Feedback__c ) ), false)
*/

IF($Permission.Skip_Validations_Permission, 
false,
IF($Profile.Name != &apos;System Administrator&apos;, And( ISPICKVAL(Origin, &apos;web&apos;), ISCHANGED( Feedback__c ) ), false)
)</errorConditionFormula>
    <errorDisplayField>Feedback__c</errorDisplayField>
    <errorMessage>Feedback cannot be updated when Source is &apos;Web&apos;.</errorMessage>
</ValidationRule>