force-app/main/default/objects/Case/listViews/All_Brisbane_Cases.listView-meta.xml
<ListView>
    <fullName>All_Brisbane_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed - Finalise</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Guest_Feedback</value>
    </filters>
    <label>All Brisbane Cases</label>
    <queue>Brisbane_Queue</queue>
</ListView>