force-app/main/default/objects/Case/listViews/All_Guest_Feedback_Cases.listView-meta.xml
<ListView>
    <fullName>All_Guest_Feedback_Cases</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Property__c</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>First_Response__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Guest_Feedback</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed - Finalise</value>
    </filters>
    <label>All Guest Feedback Cases</label>
</ListView>