force-app/main/default/objects/Case/listViews/All_Open_Contravention_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Contravention_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Exl_Apply_Contravention</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed - Finalise,Closed</value>
    </filters>
    <label>All Open Contravention Cases</label>
</ListView>