force-app/main/default/objects/Case/listViews/All_Pending_Approval_Cases.listView-meta.xml
<ListView>
    <fullName>All_Pending_Approval_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>All Pending Approval Cases</label>
    <sharedTo>
        <group>Exl_Head_of_CLM</group>
    </sharedTo>
</ListView>