force-app/main/default/objects/Case/listViews/All_Ticket_Cases.listView-meta.xml
<ListView>
    <fullName>All_Ticket_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Property__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Ticket</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed - Finalise</value>
    </filters>
    <label>All Ticket Cases</label>
</ListView>