force-app/main/default/objects/Case/listViews/Brisbane_Cashless_Triage_Case.listView-meta.xml
<ListView>
    <fullName>Brisbane_Cashless_Triage_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Brisbane Cashless Triage</label>
    <queue>Brisbane_Cashless_Triage</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>