force-app/main/default/objects/Case/listViews/Cashless_Support_Cases.listView-meta.xml
<ListView>
    <fullName>Cashless_Support_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Property__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Cashless_Support</value>
    </filters>
    <label>Cashless Support Cases</label>
</ListView>